# haspa-camt052-to-csv

./: .gitignore  Cargo.toml  Dockerfile  README.md  haspa-parser.kts
.github/workflows/: ci.yaml
src/: date_parser.rs  iso_date.rs  lib.rs  main.rs  rusty_money_serde.rs  transaction.rs  xml_document_finder.rs
src/writers/: csv.rs  mod.rs  ods.rs
tests/: camt052.csv  camt052.xml  csv_test.rs
