[package]
name = "haspa-camt052-to-csv"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.5", features = ["derive"] }
env_logger = "0.10.0"
iban = "0.1.6"
log = "0.4.19"
roxmltree = "0.18.0"
rust_decimal = "1.30.0"
rusty-money = "0.4.1"
tree_magic_mini = "3.0.3"
zip = "0.6.6"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary*
