[package]
name = "haspa-camt052-to-csv"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.5", features = ["derive"] }
color-rs = "0.8.0"
csv = "1.2.2"
env_logger = "0.10.0"
iban_validate = { version = "4.0.1", features = ["serde"] }
icu_locid = "1.2.0"
indexmap = "2.0.0"
log = "0.4.19"
roxmltree = "0.18.0"
rust_decimal = "1.30.0"
rusty-money = "0.4.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
spreadsheet-ods = "0.20.0"
tree_magic_mini = "3.0.3"
zip = "0.6.6"

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary*
